text align fix

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -7,8 +7,6 @@
   .offer-description {
     width: 720px;
     grid-template-columns: 1fr 1fr 1fr;
-    background-color: #405d78;
-    padding: 10% 0 7.5%;
     gap: 63px 63px;
   }
 
